[gd_scene load_steps=4 format=3 uid="uid://dxup6423cgox6"]

[ext_resource type="Script" uid="uid://c45j5fyq8iehj" path="res://scripts/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://b1nlew5ib28e4" path="res://scenes/player.tscn" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://d0xtpu2bu28uu" path="res://scenes/customer.tscn" id="2_sugp2"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0wfyh")
customer_scene = ExtResource("2_sugp2")

[node name="Player" parent="." instance=ExtResource("1_o5qli")]
unique_name_in_owner = true
position = Vector2(575, 584)
move_speed = 540.0

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayerInfoVBox" type="VBoxContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="WaveLabel" type="Label" parent="UI/PlayerInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Wave 1"

[node name="HealthLabel" type="Label" parent="UI/PlayerInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Health = 3"

[node name="ScoreLabel" type="Label" parent="UI/PlayerInfoVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Score: 0"

[node name="GameOverVBox" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="GameOverLabel" type="Label" parent="UI/GameOverVBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "GAME OVER"

[node name="RestartButton" type="Button" parent="UI/GameOverVBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Restart"

[node name="UpgradePanel" type="Panel" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -194.0
offset_top = -113.0
offset_right = 194.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeContainer" type="VBoxContainer" parent="UI/UpgradePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="UpgradeTTPanel" type="Panel" parent="UI/UpgradePanel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 14.0
offset_right = 151.0
offset_bottom = 226.0
grow_horizontal = 0

[node name="UpgradeTTContainer" type="VBoxContainer" parent="UI/UpgradePanel/UpgradeTTPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="UpgradeTTName" type="Label" parent="UI/UpgradePanel/UpgradeTTPanel/UpgradeTTContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "UPGRADE_NAME"

[node name="UpgradeTTDescription" type="RichTextLabel" parent="UI/UpgradePanel/UpgradeTTPanel/UpgradeTTContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "DESCRIPTION"
fit_content = true

[connection signal="pressed" from="UI/GameOverVBox/RestartButton" to="." method="_on_restart_button_pressed"]
